profile from ul to form & other small changes

--- a/profile.html
+++ b/profile.html
@@ -31,72 +31,98 @@
 </head>
 
 <body>
-    <!-- This is a templete, do any thing between this line and the next comment line -->
     <div id="include_navBar"></div>
     <div class="container-fluid">
         <div class="row-fluid">
-            <!-- <div class="col-xs-1 col-sm-1 text-center"></div> -->
-            <!-- <div class="col-xs-10 col-sm-10 text-center"> -->
-            <h1 class="text-center">My Profile</h1>
-            <br>
-            <table border="0">
-                <tr>
-                    <th>
-                        <img src="img/wildcat.png" class="img-responsive circular" alt="Responsive image">
-                    </th>
-                    <th valign="bottom" align="right">
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <button type="button" class="btn btn-lg">Upload Profile</button>
-                    </th>
-                </tr>
-            </table>
-            <br/>
-            <!--
-            <form class="form-horizontal meal-font" role="form">
-                <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-1 control-label">Email</label>
-                    <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="inputPassword3" class="col-sm-1 control-label">Password</label>
-                    <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-                    </div>
-                </div>
-            </form>
-            -->
-            <ul class="list-group meal-font">
-                <li class="list-group-item list-group-item-success text-left">
-                    <strong>Name:&nbsp;</strong>P. Linda
-                </li>
-                <br>
-                <li class="list-group-item list-group-item-info text-left">
-                    <strong>Location:&nbsp;</strong>Engelhart Room 617
-                </li>
-                <br>
-                <li class="list-group-item list-group-item-success text-left">
-                    <strong>Email:&nbsp;</strong>Linda@u.northwestern.edu
-                </li>
-                <br>
-                <li class="list-group-item list-group-item-info text-left">
-                    <strong>Gender:&nbsp;</strong>Male
-                </li>
-                <br>
-                <li class="list-group-item list-group-item-success text-left">
-                    <strong>Whats up:&nbsp;</strong>Happy every day!
-                </li>
-            </ul>
-        </div>
-        <div class="row-fluid">
-            <div class="col-sm-4 col-md-2">
-                <div class="form-group">
-                    <input type="submit" class="md-close btn btn-primary btn-lg btn-block" value="Save Changes">
-                </div>
+            <div class="col-md-12 col-sm-12">
+                <h1 class="text-center">My Profile</h1>
             </div>
         </div>
-        <div class="row-fluid"></div>
+        <div class="row-fluid">
+            <div class="col-md-12 col-sm-12">
+                <br/>
+            </div>
+        </div>
+        <div class="row-fluid">
+            <div class="col-md-2 col-sm-0"></div>
+            <div class="col-md-8 col-sm-12">
+                <table border="0" align="center">
+                    <tr>
+                        <th>
+                            <img src="img/wildcat.png" class="img-responsive circular" alt="Responsive image">
+                        </th>
+                        <th valign="bottom" align="right">
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            <button type="button" class="btn" style="font-size: 105%;">Upload Profile</button>
+                        </th>
+                    </tr>
+                </table>
+            </div>
+            <div class="col-md-2 col-sm-0"></div>
+        </div>
+        <div class="row-fluid">
+            <div class="col-md-12 col-sm-12">
+                <br/>
+            </div>
+        </div>
+        <div class="row-fluid">
+            <div class="col-md-2 col-sm-0"></div>
+            <div class="col-md-8 col-sm-12">
+                <form class="form-horizontal meal-font" role="form">
+                    <div class="form-group">
+                        <label for="inputName" class="col-sm-2 control-label">Name</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="inputName" placeholder="Name" value="P. Linda">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputLocation" class="col-sm-2 control-label">Location</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="inputLocation" placeholder="Location" value="Engelhart Room 617">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputEmail" class="col-sm-2 control-label">Email</label>
+                        <div class="col-sm-10">
+                            <input type="email" class="form-control" id="inputEmail" placeholder="Email" value="linda@u.northwestern.edu">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputPhone" class="col-sm-2 control-label">Phone</label>
+                        <div class="col-sm-10">
+                            <input type="tel" class="form-control" id="inputPhone" placeholder="Phone number" value="(888) 567 1234">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputWU" class="col-sm-2 control-label">Whats up:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="inputWU" placeholder="Whats up:" value="Happy every day!">
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="col-md-2 col-sm-0"></div>
+        </div>
+        <div class="row-fluid">
+            <div class="col-md-12 col-sm-12">
+                <br/>
+            </div>
+        </div>
+        <div class="row-fluid">
+            <div class="col-md-5 col-sm-4"></div>
+            <div class="col-md-2 col-sm-4">
+                <div class="form-group">
+                    <input type="submit" class="md-close btn btn-primary btn-lg btn-block" value="Save Changes" style="font-size: 110%;">
+                </div>
+            </div>
+            <div class="col-md-5 col-sm-4"></div>
+        </div>
+        <div class="row-fluid">
+            <div class="col-md-12 col-sm-12">
+                <br/>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
