--- a/repair-join-to-help.html
+++ b/repair-join-to-help.html
@@ -39,7 +39,7 @@
             <div class="span4">
                 <form role="form" class="meal-font">
                     <div class="form-group">
-                        <label>*The problem types you may be able to help (Select all that applied):</label>
+                        <label><span style="color: #FF0000;">*</span>The problem types you may be able to help (Select all that applied):</label>
                         <br>
                         <input type="checkbox" id="checkbox1">Electicity
                         <input type="checkbox" id="checkbox2">Heating
@@ -51,7 +51,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label>*Apartment Building:</label>
+                        <label><span style="color: #FF0000;">*</span>Apartment Building:</label>
                         <div class="btn-group">
                             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                                 Engelhart
@@ -69,7 +69,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label>*Would like to reveive messages of maintenance request via (Select all that applied):</label>
+                        <label><span style="color: #FF0000;">*</span>Would like to reveive messages of maintenance request via (Select all that applied):</label>
                         <br>
                         <input type="checkbox" id="checkbox7">&nbsp;E-mail:&nbsp;
                         <textarea class="form-control" rows="1" placeholder="Enter your e-mail Address"></textarea>
