--- a/repair-maintenance-request.html
+++ b/repair-maintenance-request.html
@@ -38,7 +38,7 @@
         <div class="row-fluid">
             <form role="form">
                 <div class="form-group">
-                    <label>*Problem Type:</label>
+                    <label><span style="color: #FF0000;">*</span>Problem Type:</label>
                     <br>
                     <input type="radio" id="radio1">Electicity
                     <input type="radio" id="radio2">Heating
@@ -49,11 +49,11 @@
                     <textarea class="form-control" rows="1" placeholder="If choose others, specify the type."></textarea>
                 </div>
                 <div class="form-group">
-                    <label>*Problem Description:</label>
+                    <label><span style="color: #FF0000;">*</span>Problem Description:</label>
                     <textarea class="form-control" rows="3"></textarea>
                 </div>
                 <div class="form-group">
-                    <label>*Apartment Building:</label>
+                    <label><span style="color: #FF0000;">*</span>Apartment Building:</label>
                     <div class="btn-group">
                         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                             Engelhart
@@ -70,11 +70,11 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label>*Room Number:</label>
+                    <label><span style="color: #FF0000;">*</span>Room Number:</label>
                     <input type="roomnumber" class="form-control" placeholder="Enter Room#">
                 </div>
                 <div class="form-group">
-                    <label>*Phone Number:</label>
+                    <label><span style="color: #FF0000;">*</span>Phone Number:</label>
                     <input type="phonenumber" class="form-control" placeholder="Enter Phone#">
                 </div>
             </form>
@@ -86,7 +86,11 @@
                 <button class="btn btn-default" onclick="location.href='repair.html'">Back</button>
             </div>
         </div>
-        <div class="row-fluid">&nbsp;</div>
+        <div class="row-fluid">
+            <div class="col-md-12 col-sm-12">
+                <br/>
+            </div>
+        </div>
     </div>
 </body>
 
