--- a/activity.html
+++ b/activity.html
@@ -33,7 +33,7 @@
     <div id="include_navBar"></div>
     <div class="container">
         <div class="row-fluid">
-        	<div class="col-md-2 col-sm-0"></div>
+            <div class="col-md-2 col-sm-0"></div>
             <div class="col-md-8 col-sm-12">
                 <div class="btn-group btn-block">
                     <button type="button" class="btn btn-default btn-lg" style="width: 33.3%; font-size: 110%;">Upcoming</button>
@@ -58,19 +58,27 @@
             </div>
             <div class="col-md-2 col-sm-0"></div>
         </div>
-        <div class="row-fluid"><div class="col-md-12 col-sm-12"><br/></div></div>
+        <div class="row-fluid">
+            <div class="col-md-12 col-sm-12">
+                <br/>
+            </div>
+        </div>
         <div class="row-fluid">
             <div class="col-md-2 col-sm-0"></div>
             <div class="col-md-8 col-sm-12">
                 <div class="btn-group btn-block">
-                    <button type="submit" class="btn btn-primary btn-lg btn-block" onclick="location.href='activity-launch.html'" style="width: 100%">Post New!</button>
+                    <button type="submit" class="btn btn-primary btn-lg btn-block" onclick="location.href='activity-launch.html'" style="width: 100%; font-size: 110%;">Post New!</button>
                 </div>
             </div>
             <div class="col-md-2 col-sm-0"></div>
         </div>
-        <div class="row-fluid"><div class="col-md-12 col-sm-12"><br/></div></div>
         <div class="row-fluid">
-        	<div class="col-md-2 col-sm-0"></div>
+            <div class="col-md-12 col-sm-12 text-center meal-font">
+                <h3>UPCOMING</h3>
+            </div>
+        </div>
+        <div class="row-fluid">
+            <div class="col-md-2 col-sm-0"></div>
             <div class="col-md-8 col-sm-12">
                 <div class="panel panel-primary meal-font">
                     <div class="panel-heading">NBA GALA!</div>
