--- a/profile.html
+++ b/profile.html
@@ -94,9 +94,9 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="inputWU" class="col-sm-2 control-label">Whats up:</label>
+                        <label for="inputWU" class="col-sm-2 control-label">Whats up</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputWU" placeholder="Whats up:" value="Happy every day!">
+                            <input type="text" class="form-control" id="inputWU" placeholder="Whats up" value="Happy every day!">
                         </div>
                     </div>
                 </form>
