meal-font ugly, change to bodyfont

--- a/activity-confirm.html
+++ b/activity-confirm.html
@@ -37,10 +37,10 @@
         <div class="row-fluid">
             <div class="col-md-1"></div>
             <div class="col-md-10">
-                <div class="alert alert-info meal-font">
+                <div class="alert alert-info bodyfont">
                     Please confirm your information and click the SUBMIT button below.
                 </div>
-                <div class="panel panel-primary meal-font">
+                <div class="panel panel-primary bodyfont">
                     <div class="container-fluid">
                         <div class="row-fluid">
                             <div class="span4 text-left">
