--- a/activity-details.html
+++ b/activity-details.html
@@ -40,7 +40,7 @@
     <div class="container-fluid">
         <div class="row-fluid">
 
-            <div class="panel panel-primary meal-font">
+            <div class="panel panel-primary bodyfont">
                 <div class="panel-heading">NBA GALA!</div>
                 <div class="panel-body">
                     <strong>
