--- a/activity-launch.html
+++ b/activity-launch.html
@@ -47,46 +47,46 @@
             <div class="col-md-2 col-sm-0"></div>
             <div class="col-md-8 col-sm-12">
                 <form role="form">
-                    <p class="help-block meal-font">
+                    <p class="help-block bodyfont">
                         <span style="color: #FF0000;">*</span>&nbsp;is required.</p>
-                    <div class="form-group meal-font">
+                    <div class="form-group bodyfont">
                         <label>Host Name</label>
                         <input type="name" class="form-control" id="Name" placeholder="Enter Name(Nickname)" value="P. Linda">
                     </div>
-                    <div class="form-group meal-font">
+                    <div class="form-group bodyfont">
                         <label>
                             <span style="color: #FF0000;">*</span>Activity Title</label>
                         <input type="title" class="form-control" id="Title" placeholder="Enter Title">
                     </div>
-                    <div class="form-group meal-font">
+                    <div class="form-group bodyfont">
                         <label>
                             <span style="color: #FF0000;">*</span>Email address</label>
                         <input type="email" class="form-control" id="Email" placeholder="Enter Email">
                     </div>
-                    <div class="form-group meal-font">
+                    <div class="form-group bodyfont">
                         <label>
                             <span style="color: #FF0000;">*</span>Telephone:</label>
                         <input type="telephone" class="form-control" id="Tel" placeholder="Enter Tel#">
                     </div>
-                    <div class="form-group meal-font">
+                    <div class="form-group bodyfont">
                         <label>
                             <span style="color: #FF0000;">*</span>Location</label>
                         <input type="location" class="form-control" id="Location" placeholder="Enter Location">
                     </div>
-                    <div class="form-group meal-font">
+                    <div class="form-group bodyfont">
                         <label>Tag</label>
                         <input type="tag" class="form-control" id="Tag" placeholder="Enter Tag">
                     </div>
-                    <div class="form-group meal-font">
+                    <div class="form-group bodyfont">
                         <label>
                             <span style="color: #FF0000;">*</span>Capacity</label>
                         <input type="number" id="Capacity" class="form-control">
                     </div>
-                    <div class="form-group meal-font">
+                    <div class="form-group bodyfont">
                         <label>Activity Description(300 characters)</label>
                         <textarea class="form-control" rows="3"></textarea>
                     </div>
-                    <div class="form-group meal-font">
+                    <div class="form-group bodyfont">
                         <label>Picture Upload</label>
                         <input type="file" id="Picture">
                     </div>
