--- a/activity.html
+++ b/activity.html
@@ -73,14 +73,14 @@
             <div class="col-md-2 col-sm-0"></div>
         </div>
         <div class="row-fluid">
-            <div class="col-md-12 col-sm-12 text-center meal-font">
+            <div class="col-md-12 col-sm-12 text-center bodyfont">
                 <h3>UPCOMING</h3>
             </div>
         </div>
         <div class="row-fluid">
             <div class="col-md-2 col-sm-0"></div>
             <div class="col-md-8 col-sm-12">
-                <div class="panel panel-primary meal-font">
+                <div class="panel panel-primary bodyfont">
                     <div class="panel-heading">NBA GALA!</div>
                     <div class="panel-body">
                         <ul>
@@ -99,7 +99,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="panel panel-primary meal-font">
+                <div class="panel panel-primary bodyfont">
                     <div class="panel-heading">MAHJONG</div>
                     <div class="panel-body">
                         <ul>
@@ -118,7 +118,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="panel panel-primary meal-font">
+                <div class="panel panel-primary bodyfont">
                     <div class="panel-heading">LOL</div>
                     <div class="panel-body">
                         <ul>
