--- a/meals-create.html
+++ b/meals-create.html
@@ -34,7 +34,7 @@
     <div id="include_navBar"></div>
     <!-- This is a templete, do any thing between this line and the next comment line -->
 
-    <div class="container-fluid meal-font row-fluid">
+    <div class="container-fluid bodyfont row-fluid">
         <form role="form" action="meals-submit.html" method="get">
             <div class="form-group">
                 <label>Resaurant</label>
