--- a/meals.html
+++ b/meals.html
@@ -52,7 +52,7 @@
 
 <body>
     <div id="include_navBar"></div>
-    <div class="container-fluid meal-font row-fluid">
+    <div class="container-fluid bodyfont row-fluid">
         <div class="span4 text-left"></div>
         <div class="span4 text-left">Select a popular meal other people like</div>
         <p></p>
