--- a/profile.html
+++ b/profile.html
@@ -68,7 +68,7 @@
         <div class="row-fluid">
             <div class="col-md-2 col-sm-0"></div>
             <div class="col-md-8 col-sm-12">
-                <form class="form-horizontal meal-font" role="form">
+                <form class="form-horizontal bodyfont" role="form">
                     <div class="form-group">
                         <label for="inputName" class="col-sm-2 control-label">Name</label>
                         <div class="col-sm-10">
