--- a/repair-submit.html
+++ b/repair-submit.html
@@ -55,7 +55,7 @@
 
 <body>
     <div id="include_navBar"></div>
-    <div class="span4 text-center meal-font">
+    <div class="span4 text-center bodyfont">
         <div class="col-xs-1 col-sm-1"></div>
         <div class="col-xs-10 col-sm-10">
             <div align="center" class="alert alert-success">Request successfully submitted!</div>
