--- a/repair.html
+++ b/repair.html
@@ -34,7 +34,7 @@
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="span4 text-center">
-                <div class="meal-font">Ask for official help from school, usually need 2 days to come.</div>
+                <div class="bodyfont">Ask for official help from school, usually need 2 days to come.</div>
                 <div class="btn-group btn-group-lg btn-group-vertical panel panel-default margin-base-vertical">
                     <div class="btn-toolbar">
                         <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair-maintenance-request.html'">
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="span4 text-center">
-                <div class="meal-font">Ask for help from the students living in the same apartment.</div>
+                <div class="bodyfont">Ask for help from the students living in the same apartment.</div>
                 <div class="btn-group btn-group-lg btn-group-vertical panel panel-default margin-base-vertical">
                     <div class="btn-toolbar">
                         <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair-ask-for-help.html'">
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <div class="span4 text-center">
-                <div class="meal-font">Join to help the students living in the same apartment.</div>
+                <div class="bodyfont">Join to help the students living in the same apartment.</div>
                 <div class="btn-group btn-group-lg btn-group-vertical panel panel-default margin-base-vertical">
                     <div class="btn-toolbar">
                         <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair-join-to-help.html'">
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="span4 text-center">
-                <div class="meal-font">Search for the frequently asked questions and answers:</div>
+                <div class="bodyfont">Search for the frequently asked questions and answers:</div>
                 <div class="btn-group btn-group-lg btn-group-vertical panel panel-default margin-base-vertical">
                     <div class="btn-toolbar">
                         <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair.html'">
