--- a/repair-ask-for-help.html
+++ b/repair-ask-for-help.html
@@ -34,12 +34,13 @@
     <div class="span4 text-center">
         <h2>ASK FOR HELP</h2>
     </div>
-    <div class="container-fluid meal-font">
+    <div class="container-fluid bodyfont">
         <div class="row-fluid">
             <div class="span4">
                 <form role="form">
                     <div class="form-group">
-                        <label><span style="color: #FF0000;">*</span>Problem Type:</label>
+                        <label>
+                            <span style="color: #FF0000;">*</span>Problem Type:</label>
                         <br>
                         <input type="radio" id="radio1">Electicity
                         <input type="radio" id="radio2">Heating
@@ -50,11 +51,13 @@
                         <textarea class="form-control" rows="1" placeholder="If choose others, specify the type."></textarea>
                     </div>
                     <div class="form-group">
-                        <label><span style="color: #FF0000;">*</span>Problem Description:</label>
+                        <label>
+                            <span style="color: #FF0000;">*</span>Problem Description:</label>
                         <textarea class="form-control" rows="3"></textarea>
                     </div>
                     <div class="form-group">
-                        <label><span style="color: #FF0000;">*</span>Apartment Building:</label>
+                        <label>
+                            <span style="color: #FF0000;">*</span>Apartment Building:</label>
                         <div class="btn-group">
                             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                                 Engelhart
@@ -71,16 +74,19 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label><span style="color: #FF0000;">*</span>Room Number:</label>
+                        <label>
+                            <span style="color: #FF0000;">*</span>Room Number:</label>
                         <input type="roomnumber" class="form-control" placeholder="Enter Room#">
                     </div>
                     <div class="form-group">
-                        <label><span style="color: #FF0000;">*</span>Phone Number:</label>
+                        <label>
+                            <span style="color: #FF0000;">*</span>Phone Number:</label>
                         <input type="phonenumber" class="form-control" placeholder="Enter Phone#">
                     </div>
 
                     <div class="form-group">
-                        <label><span style="color: #FF0000;">*</span>Available time:</label>
+                        <label>
+                            <span style="color: #FF0000;">*</span>Available time:</label>
                         <input type="availabletime" class="form-control" placeholder="Enter available time">
                     </div>
                 </form>
@@ -99,7 +105,7 @@
                 <br/>
             </div>
         </div>
-    </div>    
+    </div>
 </body>
 
 </html>
