--- a/meals-submit.html
+++ b/meals-submit.html
@@ -59,8 +59,10 @@
     <div class="span4 text-center bodyfont">
         <div class="col-xs-1 col-sm-1"></div>
         <div class="col-xs-10 col-sm-10">
-            <div align="center" class="alert alert-success">Request successfully submitted!</div>
-            <button class="btn btn-default" onclick="location.href='meals.html'" style="width:100px;">Back</button>
+            <div align="center">
+                <div align="center" class="alert alert-success" style="width:250px;">Request successfully submitted!</div>
+                <button class="btn btn-default" onclick="location.href='meals.html'" style="width:100px;">Back</button>
+            </div>
         </div>
     </div>
 
