--- a/meals-create.html
+++ b/meals-create.html
@@ -34,13 +34,13 @@
     <div id="include_navBar"></div>
     <!-- This is a templete, do any thing between this line and the next comment line -->
 
-    <div class="container-fluid bodyfont row-fluid">
+    <div class="container-fluid bodyfont row-fluid" align="center">
         <form role="form" action="meals-submit.html" method="get">
             <div class="form-group">
                 <label>Resaurant</label>
                 <p></p>
                 <div id="rest_div">
-                    <select name="mydropdown_rest">
+                    <select name="mydropdown_rest" style="width:230px;">
                         <option value="1">Chicken Shack</option>
                         <option value="2">Koi</option>
                         <option value="3">Burger King</option>
@@ -51,7 +51,7 @@
                 <label>Dishes</label>
                 <p></p>
                 <div id="mydropdown1">
-                    <select name="mydropdown1">
+                    <select name="mydropdown1" style="width:230px;">
                         <option value="1">CATFISH BONE IN -- 11.50</option>
                         <option value="3">CATFISH NUGGETS BONELESS -- 8.97</option>
                         <option value="3">PERCH -- 8.97</option>
@@ -60,7 +60,7 @@
                 </div>
 
                 <div id="mydropdown2" class="sr-only">
-                    <select name="mydropdown2">
+                    <select name="mydropdown2" style="width:230px;">
                         <option value="1">Kung Bao chicken -- 12.99</option>
                         <option value="2">Szechwan Red Snapper Whole Fish -- 25.99</option>
                         <option value="3">Hot Pepper Chicken -- 12.99</option>
@@ -68,31 +68,32 @@
                 </div>
 
                 <div id="mydropdown3" class="sr-only">
-                    <select name="mydropdown3">
+                    <select name="mydropdown3" style="width:230px;">
                         <option value="1">Sausage & Cheese Muffin Sandwich Meal</option>
                         <option value="2">Southwestern Breakfast Burrito Meal</option>
                         <option value="3">Sausage Biscuit Sandwich Meal</option>
                     </select>
                 </div>
             </div>
-            <div class="form-group">
-                <label>Location</label>
-                <input type="location" class="form-control" placeholder="Enter Location" style="width: 230px;">
-            </div>
-            <div class="form-group">
-                <label>Time</label>
-                <input type="time" class="form-control" id="mtime" style="width: 230px;">
-            </div>
-            <div class="form-group">
-                <label>Date</label>
-                <input type="date" class="form-control" id="mdate" value="" style="width: 230px;">
+            <div align="center">
+                <div class="form-group">
+                    <label>Location</label>
+                    <input type="location" class="form-control" placeholder="Enter Location" style="width: 230px;">
+                </div>
+                <div class="form-group">
+                    <label>Time</label>
+                    <input type="time" class="form-control" id="mtime" style="width: 230px;">
+                </div>
+                <div class="form-group">
+                    <label>Date</label>
+                    <input type="date" class="form-control" id="mdate" value="" style="width: 230px;">
+                </div>
             </div>
             <button type="submit" class="btn btn-default" style="width:105px;">Submit</button>
             &nbsp;&nbsp;&nbsp;
             <button type="submit" class="btn btn-default" style="width:105px;">Save As Fav</button>
         </form>
     </div>
-
     <script>
     $("select").change(function() {
         var selectno = $("#rest_div select").val();
