meals center align

--- a/meals.html
+++ b/meals.html
@@ -52,9 +52,9 @@
 
 <body>
     <div id="include_navBar"></div>
-    <div class="container-fluid bodyfont row-fluid">
+    <div class="container-fluid bodyfont row-fluid" align="center">
         <div class="span4 text-left"></div>
-        <div class="span4 text-left">Select a popular meal other people like</div>
+        <div class="span4 text-center">Select a popular meal</div>
         <p></p>
         <div class="span4 text-center">
             <div class="btn-group btn-group-vertical panel panel-default">
@@ -68,7 +68,7 @@
                 </div>
             </div>
         </div>
-        <div class="span4 text-left">Select from my favorite</div>
+        <div class="span4 text-center">Select from my favorite</div>
         <p></p>
         <div class="span4 text-center">
             <div class="btn-group btn-group-vertical panel panel-default">
@@ -82,7 +82,7 @@
                 </div>
             </div>
         </div>
-        <div class="span4 text-left">Want something new?</div>
+        <div class="span4 text-center">Want something new?</div>
         <p></p>
         <div class="span4 text-center">
             <div class="btn-group btn-group-vertical panel panel-default">
@@ -95,9 +95,9 @@
                 </div>
             </div>
         </div>
-        <div class="span4 text-left">My Order History</div>
+        <div class="span4 text-center">My Order History</div>
         <p></p>
-        <div class="panel panel-primary collapse-group">
+        <div class="panel panel-primary collapse-group text-left" style="width:300px;">
             <div class="panel-heading">Burger King - Mar.02, 2014
             </div>
             <a class="btn" data-toggle="collapse" data-target="#viewdetails1">View details &raquo;</a>
@@ -124,7 +124,7 @@
             </div>
         </div>
 
-        <div class="panel panel-primary">
+        <div class="panel panel-primary collapse-group text-left" style="width:300px;">
             <div class="panel-heading">Koi - Mar.02, 2014</div>
             <a class="btn" data-toggle="collapse" data-target="#viewdetails2">View details &raquo;</a>
             <div class="panel-body collapse" id="viewdetails2">
