activity bunch of pages

--- a/activity-hist-engelhart.html
+++ b/activity-hist-engelhart.html
@@ -46,11 +46,11 @@
                         <ul class="dropdown-menu dropdown-menu-right" role="menu" style="text-align: center; font-size: 110%; min-width: 100%;">
                             <li><a onclick="location.href='activity.html'">All</a>
                             </li>
-                            <li><a onclick="location.href='activity-up-engelhart.html'">Engelhart</a>
+                            <li><a onclick="location.href='activity-hist-engelhart.html'">Engelhart</a>
                             </li>
-                            <li><a onclick="location.href='activity-up-seabury.html'">Seabury</a>
+                            <li><a onclick="location.href='activity-hist-seabury.html'">Seabury</a>
                             </li>
-                            <li><a onclick="location.href='activity-up-mcmaus.html'">McMaus</a>
+                            <li><a onclick="location.href='activity-hist-mcmaus.html'">McMaus</a>
                             </li>
                         </ul>
                     </div>
@@ -74,69 +74,12 @@
         </div>
         <div class="row-fluid">
             <div class="col-md-12 col-sm-12 text-center bodyfont">
-                <h3>UPCOMING - All</h3>
+                <h3>HISTORY - Engelhart</h3>
             </div>
         </div>
         <div class="row-fluid">
             <div class="col-md-2 col-sm-0"></div>
             <div class="col-md-8 col-sm-12">
-                <div class="panel panel-primary bodyfont">
-                    <div class="panel-heading">NBA GALA!</div>
-                    <div class="panel-body">
-                        <ul>
-                            <strong>
-                                <li>
-                                    <span class=" glyphicon glyphicon-time"></span>02-02 20:00-22:00</li>
-                                <li>
-                                    <span class=" glyphicon glyphicon-map-marker"></span>Engelhalt Room 325</li>
-                                <li>
-                                    <span class=" glyphicon glyphicon-tag"></span>TAG: Basketball</li>
-                                <li>
-                                    <span class=" glyphicon glyphicon-phone"></span>Tel: (123) 456-7890</li>
-                                <p></p>
-                                <button type="submit" class="btn" onclick="location.href='activity-details.html'">See Details</button>
-                            </strong>
-                        </ul>
-                    </div>
-                </div>
-                <div class="panel panel-primary bodyfont">
-                    <div class="panel-heading">MAHJONG</div>
-                    <div class="panel-body">
-                        <ul>
-                            <strong>
-                                <li>
-                                    <span class=" glyphicon glyphicon-time"></span>02-04 21:00-23:00</li>
-                                <li>
-                                    <span class=" glyphicon glyphicon-map-marker"></span>Seabury Room 201</li>
-                                <li>
-                                    <span class=" glyphicon glyphicon-tag"></span>TAG: Table Game</li>
-                                <li>
-                                    <span class=" glyphicon glyphicon-phone"></span>Tel: (222) 333-4455</li>
-                                <p></p>
-                                <button type="submit" class="btn">See Details</button>
-                            </strong>
-                        </ul>
-                    </div>
-                </div>
-                <div class="panel panel-primary bodyfont">
-                    <div class="panel-heading">LOL</div>
-                    <div class="panel-body">
-                        <ul>
-                            <strong>
-                                <li>
-                                    <span class=" glyphicon glyphicon-time"></span>02-04 14:00-15:00</li>
-                                <li>
-                                    <span class=" glyphicon glyphicon-map-marker"></span>Engelhalt Room 214</li>
-                                <li>
-                                    <span class=" glyphicon glyphicon-tag"></span>TAG: PC GAME</li>
-                                <li>
-                                    <span class=" glyphicon glyphicon-phone"></span>Tel: (999) 888-7766</li>
-                                <p></p>
-                                <button type="submit" class="btn">See Details</button>
-                            </strong>
-                        </ul>
-                    </div>
-                </div>
             </div>
             <div class="col-md-2 col-sm-0"></div>
         </div>
