--- a/activity-up-engelhart.html
+++ b/activity-up-engelhart.html
@@ -74,7 +74,7 @@
         </div>
         <div class="row-fluid">
             <div class="col-md-12 col-sm-12 text-center bodyfont">
-                <h3>UPCOMING - All</h3>
+                <h3>UPCOMING - Engelhart</h3>
             </div>
         </div>
         <div class="row-fluid">
@@ -95,25 +95,6 @@
                                     <span class=" glyphicon glyphicon-phone"></span>Tel: (123) 456-7890</li>
                                 <p></p>
                                 <button type="submit" class="btn" onclick="location.href='activity-details.html'">See Details</button>
-                            </strong>
-                        </ul>
-                    </div>
-                </div>
-                <div class="panel panel-primary bodyfont">
-                    <div class="panel-heading">MAHJONG</div>
-                    <div class="panel-body">
-                        <ul>
-                            <strong>
-                                <li>
-                                    <span class=" glyphicon glyphicon-time"></span>02-04 21:00-23:00</li>
-                                <li>
-                                    <span class=" glyphicon glyphicon-map-marker"></span>Seabury Room 201</li>
-                                <li>
-                                    <span class=" glyphicon glyphicon-tag"></span>TAG: Table Game</li>
-                                <li>
-                                    <span class=" glyphicon glyphicon-phone"></span>Tel: (222) 333-4455</li>
-                                <p></p>
-                                <button type="submit" class="btn">See Details</button>
                             </strong>
                         </ul>
                     </div>
