--- a/activity-up-seabury.html
+++ b/activity-up-seabury.html
@@ -74,31 +74,12 @@
         </div>
         <div class="row-fluid">
             <div class="col-md-12 col-sm-12 text-center bodyfont">
-                <h3>UPCOMING - All</h3>
+                <h3>UPCOMING - Seabury</h3>
             </div>
         </div>
         <div class="row-fluid">
             <div class="col-md-2 col-sm-0"></div>
             <div class="col-md-8 col-sm-12">
-                <div class="panel panel-primary bodyfont">
-                    <div class="panel-heading">NBA GALA!</div>
-                    <div class="panel-body">
-                        <ul>
-                            <strong>
-                                <li>
-                                    <span class=" glyphicon glyphicon-time"></span>02-02 20:00-22:00</li>
-                                <li>
-                                    <span class=" glyphicon glyphicon-map-marker"></span>Engelhalt Room 325</li>
-                                <li>
-                                    <span class=" glyphicon glyphicon-tag"></span>TAG: Basketball</li>
-                                <li>
-                                    <span class=" glyphicon glyphicon-phone"></span>Tel: (123) 456-7890</li>
-                                <p></p>
-                                <button type="submit" class="btn" onclick="location.href='activity-details.html'">See Details</button>
-                            </strong>
-                        </ul>
-                    </div>
-                </div>
                 <div class="panel panel-primary bodyfont">
                     <div class="panel-heading">MAHJONG</div>
                     <div class="panel-body">
@@ -112,25 +93,6 @@
                                     <span class=" glyphicon glyphicon-tag"></span>TAG: Table Game</li>
                                 <li>
                                     <span class=" glyphicon glyphicon-phone"></span>Tel: (222) 333-4455</li>
-                                <p></p>
-                                <button type="submit" class="btn">See Details</button>
-                            </strong>
-                        </ul>
-                    </div>
-                </div>
-                <div class="panel panel-primary bodyfont">
-                    <div class="panel-heading">LOL</div>
-                    <div class="panel-body">
-                        <ul>
-                            <strong>
-                                <li>
-                                    <span class=" glyphicon glyphicon-time"></span>02-04 14:00-15:00</li>
-                                <li>
-                                    <span class=" glyphicon glyphicon-map-marker"></span>Engelhalt Room 214</li>
-                                <li>
-                                    <span class=" glyphicon glyphicon-tag"></span>TAG: PC GAME</li>
-                                <li>
-                                    <span class=" glyphicon glyphicon-phone"></span>Tel: (999) 888-7766</li>
                                 <p></p>
                                 <button type="submit" class="btn">See Details</button>
                             </strong>
