--- a/profile.html
+++ b/profile.html
@@ -53,7 +53,7 @@
                         </th>
                         <th valign="bottom" align="right">
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <button type="button" class="btn" style="font-size: 105%;">Update Profile</button>
+                            <button type="button" class="btn" style="font-size: 105%;">Update Photo</button>
                         </th>
                     </tr>
                 </table>
